# VERB-4D

./: .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  VERB-4D.sln  VERB-4D.vcxproj  install_openblas.ps1  install_openblas.sh  install_openblas_ninja.ps1  install_openblas_vs.ps1  install_verb.ps1  install_verb.sh  log.txt  readme.txt
LICENSES/: BSD-3-Clause.txt
cmake/: FindOrDownloadEigen.cmake  FindOrDownloadXTensor.cmake  GetBlasType.cmake
docs/: Doxyfile  README.md
src/: BoundaryConditionType.hpp  Convection_1D_2ndORDER_NONUNIFORM_GRID.cpp  Convection_1D_2ndORDER_NONUNIFORM_GRID.h  Convection_1D_ULTIMATE_QUICKEST6.cpp  Convection_1D_ULTIMATE_QUICKEST6.h  Convection_2D.cpp  Convection_2D.h  Convection_3D.cpp  Convection_3D.h  CustomDate.cpp  CustomDate.h  DataAssimilation.cpp  DataAssimilation.h  DataAssimilationConvection.cpp  DataAssimilationConvection.h  DataAssimilationDiffusion.cpp  DataAssimilationDiffusion.h  DataAssimilationHelper.cpp  DataAssimilationHelper.h  Diffusion_1D.cpp  Diffusion_1D.h  Diffusion_2D.cpp  Diffusion_2D.h  Diffusion_2D_MKL.cpp  Diffusion_2D_MKL.hpp  Diffusion_2D_PPFV.cpp  Diffusion_2D_PPFV.h  Diffusion_ADI1.cpp  Diffusion_ADI1.h  Diffusion_ADI2.cpp  Diffusion_ADI2.h  Diffusion_ADI3.cpp  Diffusion_ADI3.h  Interpolation.cpp  Interpolation.h  Logger.cpp  Logger.h  Makefile  MakefileNoMatlab  Matrix.cpp  (+17 more)
src/html/: _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8cpp.html  _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8cpp.js  _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8h.html  _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8h.js  _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8h_source.html  _convection__2_d_8cpp.html  _convection__2_d_8cpp.js  _convection__2_d_8h.html  _convection__2_d_8h.js  _convection__2_d_8h_source.html  _diffusion__1_d_8cpp.html  _diffusion__1_d_8cpp.js  _diffusion__1_d_8h.html  _diffusion__1_d_8h.js  _diffusion__1_d_8h_source.html  _diffusion__2_d_8cpp.html  _diffusion__2_d_8cpp.js  _diffusion__2_d_8h.html  _diffusion__2_d_8h.js  _diffusion__2_d_8h_source.html  _diffusion___a_d_i1_8cpp.html  _diffusion___a_d_i1_8cpp.js  _diffusion___a_d_i1_8h.html  _diffusion___a_d_i1_8h.js  _diffusion___a_d_i1_8h_source.html  _diffusion___a_d_i2_8cpp.html  _diffusion___a_d_i2_8cpp.js  _diffusion___a_d_i2_8h.html  _diffusion___a_d_i2_8h.js  _diffusion___a_d_i2_8h_source.html  _diffusion___a_d_i3_8cpp.html  _diffusion___a_d_i3_8cpp.js  _diffusion___a_d_i3_8h.html  _diffusion___a_d_i3_8h.js  _diffusion___a_d_i3_8h_source.html  _interpolation_8cpp.html  _interpolation_8cpp.js  _interpolation_8h.html  _interpolation_8h.js  _interpolation_8h_source.html  (+140 more)
src/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+32 more)
src/latex/: _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8cpp.tex  _convection__1_d___u_l_t_i_m_a_t_e___q_u_i_c_k_e_s_t6_8h.tex  _convection__2_d_8cpp.tex  _convection__2_d_8h.tex  _diffusion__1_d_8cpp.tex  _diffusion__1_d_8h.tex  _diffusion__2_d_8cpp.tex  _diffusion__2_d_8h.tex  _diffusion___a_d_i1_8cpp.tex  _diffusion___a_d_i1_8h.tex  _diffusion___a_d_i2_8cpp.tex  _diffusion___a_d_i2_8h.tex  _diffusion___a_d_i3_8cpp.tex  _diffusion___a_d_i3_8h.tex  _interpolation_8cpp.tex  _interpolation_8h.tex  _logger_8cpp.tex  _logger_8h.tex  _matrix_8cpp.tex  _matrix_8h.tex  _matrix_solver_8cpp.tex  _matrix_solver_8h.tex  _monot_cubic_interpolator_8cpp.tex  _monot_cubic_interpolator_8hpp.tex  _parameters_8cpp.tex  _parameters_8h.tex  _read_initial_data_8cpp.tex  _read_initial_data_8h.tex  _updatable_matrix_8cpp.tex  _updatable_matrix_8h.tex  _v_e_r_b4_d___solver_8cpp.tex  annotated.tex  class_calculation_matrix.eps  class_calculation_matrix.tex  class_diag_matrix.eps  class_diag_matrix.tex  class_logger.tex  class_logger_1_1_streamer.eps  class_logger_1_1_streamer.tex  class_logger_1_1_streamer_1_1_string_buffer.eps  (+21 more)
src/ppfv/: Edge.h  Equation.h  Mesh.cpp  Mesh.h  Solver.cpp  Solver.h  common.h
src/ppfv/Cases/: VERB_ppfv2d.cpp  VERB_ppfv2d.h
src/python_bindings/: Define_python_modules.cpp  Matrix_conversion.h  const_reference_wrapper.h
test/: CMakeLists.txt  DataAssimilationInternalTests.cpp  DataAssimilationInternalTests.h  MatrixOperationsTests.cpp  MatrixOperationsTests.h  PMFInternal.h  PMFInternalTests.cpp  PMFInternalTests.h  PMFTests.h  TestDataAssimilation.cpp  TestHelper.h  test_builds.py  test_runner.h
